# computer_vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
build_cdt/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  monOdometry_debug.txt
build_cdt/kitti_tools/custom_tools/: Makefile  cmake_install.cmake
build_cdt/odometry/monocular/: Makefile  cmake_install.cmake
build_cdt/utils/logger/: Makefile  cmake_install.cmake
src/: CMakeLists.txt
src/kitti_tools/custom_tools/: CMakeLists.txt  common.h  custom_exceptions.h  flow_stereo_io.h  test.cpp
src/kitti_tools/custom_tools/flow_reader/: flow_stereo_io.h  kitti_flow_calibration_reader.cpp  kitti_flow_calibration_reader.h
src/kitti_tools/custom_tools/libs/: KittiOdometryIO.cpp  KittiOdometryIO.hpp  kitti_flow_calibration_reader.h
src/kitti_tools/custom_tools/odometry_reader/: KittiOdometryIO.cpp  OdometryIO.hpp
src/kitti_tools/custom_tools/test/: KittiOdometryIO_test.cpp  flow_cal_reader_test.cpp  testflow.cpp
src/odometry/monocular/: CMakeLists.txt  MonOdometry.cpp  MonOdometry.h  MonOdommetry.h  monOdometry_test.cpp
src/odometry/monocular/libs/: MonOdometry.cpp  MonOdometry.h
src/odometry/monocular/test/: monOdometry_test.cpp
src/utils/calibration/: CamParams.cpp  CamParams.hpp
src/utils/logger/: CMakeLists.txt
src/utils/logger/libs/: Logger.hpp  Logger_imp.hpp
src/utils/logger/test/: logger_test.cpp
src/utils/visualization/include/: Scope.hpp
src/utils/visualization/include/qcustomplot-sharedlib/sharedlib-compilation/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
src/utils/visualization/include/qcustomplot-sharedlib/sharedlib-compilation/release/: moc_qcustomplot.cpp
src/utils/visualization/include/qcustomplot-sharedlib/sharedlib-usage/: Makefile  libqcustomplot.so.2.0.0  main.cpp  sharedlib-usage
src/utils/visualization/src/: Makefile  scope_test.cpp  sharedlib-usage  sharedlib-usage.pro
